More responsive design, trying to fix font size on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ h2 {
         clear: both;
         margin-left: 16px;
         width: 30%;
-        font-size: larger;
+        font-size: x-large;
         height: 130px;
     }
 }
@@ -124,7 +124,7 @@ h2 {
         clear: both;
         margin-left: 16px;
         width: 30%;
-        font-size: larger;
+        font-size: x-large;
         height: 130px;
     }
 }
